added footer section

--- a/index.html
+++ b/index.html
@@ -174,6 +174,44 @@
                 </div>
             </div>
         </section>
+        <!-- footer section -->
+        <section class="mt-28 flex flex-col-reverse gap-10 md:flex md:flex-row md:justify-between p-6">
+            <div class="grid gap-y-4">
+                <div class="md:flex py-5 pl-5 pr-16 shadow-lg bg-white rounded-xl gap-9">
+                    <div>
+                        <img class="w-20 mx-auto" src="icons/house.png" alt="">
+                    </div>
+                    <div class="text-center mt-5 md:text-left md:mt-0">
+                        <h3 class="text-2xl font-bold">Find the Perfect Fit</h3>
+                        <p class="mt-4">Everybody is different, which is why we <br>
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="md:flex  py-5 pl-5 pr-16  shadow-lg bg-white rounded-xl gap-9">
+                    <div>
+                        <img class="w-20 mx-auto" src="icons/box.png" alt="">
+                    </div>
+                    <div class="text-center mt-5 md:text-left md:mt-0">
+                        <h3 class="text-2xl font-bold">Find the Perfect Fit</h3>
+                        <p class="mt-4">Everybody is different, which is why we <br>
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="md:flex  py-5 pl-5 pr-16  shadow-lg bg-white rounded-xl gap-9">
+                    <div>
+                        <img class="w-20 mx-auto" src="icons/question.png" alt="">
+                    </div>
+                    <div class="text-center mt-5 md:text-left md:mt-0">
+                        <h3 class="text-2xl font-bold">Find the Perfect Fit</h3>
+                        <p class="mt-4">Everybody is different, which is why we <br>
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="md:w-2/4">
+                <img class="w-full md:w-full" src="images/shopping.png" alt="">
+            </div>
+        </section>
     </main>
 </body>
 </html>
